# CLI-Game-Engine-CGE-

./: .gitignore  Makefile  pyproject.toml
cge/: __init__.py  __init__.pyi
cge/Data/: data_check.py  data_classes.py  data_classes.pyi  data_transform.py
cge/Error/: assertion.py
cge/Scene/: scene.py
cge/Sprite/: sprite.py  sprite.pyi
cge/Window/: window.py
docs/: API_REFERENCE.md
perso/: upload
script/: check-package  test-package  uninstall-package
tests/: test_cge.py
tests/Sprite/: test_cge_sprite.py
